--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -2,7 +2,6 @@
 <%= simple_form_for(@project) do |f| %>
 <%= f.input :name %>
 <%= f.input :start_date %>
-<%= f.collection_select :yarn_ids, Yarn.all, :id, :name %>
-<%= f.input :end_date, collection: 1..10%>
+<%= f.input :description %>
 <%= f.submit %>
 <% end %>
