added logo to header

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,17 @@
 // Specific CSS for your home-page
 #title-landing {
   text-align: left;
+  margin-top: 26px;
+}
+
+body {
+  background-color: #ffffff;
+}
+
+#logo {
+  width: 100px;
+  height: 100px;
+}
+
+.landing-header {
 }
