--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
 <div class="container">
-  <h1 id="title-landing">YarnStash</h1>
+  <div class="landing-header d-flex flex-row">
+    <%= image_tag("Yarn", id: 'logo')%>
+    <h1 id="title-landing">YarnStash</h1>
+  </div>
 </div>
