adding icons to the navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,1 +1,7 @@
-<h1 id="navbar-test">navbar</h1>
+<div id="navbar">
+  <div id="navbar-icons" class="d-flex justify-content-between">
+   <i class="fa-solid fa-house" id="navbar-icons"></i>
+   <i class="fa-solid fa-house" id="navbar-icons"></i>
+   <i class="fa-solid fa-plus" id="navbar-icons"></i>
+  </div>
+</div>
