--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,5 +1,13 @@
-#navbar-test {
+#navbar {
   position: fixed;
   bottom: 0;
-  width: 100%
+  width: 100%;
+  height: 77px;
+  background-color: grey;
+  margin-bottom: 0px;
+}
+
+#navbar-icons {
+  font-size: 30px;
+  padding: 15px;
 }
