removed logo and changed color of navbar + navbar icons

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
-  <div class="landing-header d-flex flex-row">
-    <%= image_tag("Yarn", id: 'logo')%>
-    <h1 id="title-landing">YarnStash</h1>
+  <div class="landing-header d-flex flex-row justify-content-center">
+    <h1 id="title-landing text-align-center">YarnStash</h1>
   </div>
 </div>
