--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -3,11 +3,12 @@
   bottom: 0;
   width: 100%;
   height: 77px;
-  background-color: grey;
+  background-color: rgb(248, 248, 158);
   margin-bottom: 0px;
 }
 
 #navbar-icons {
   font-size: 30px;
   padding: 15px;
+  color: #f17b3c;
 }
