--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="landing-header d-flex flex-row justify-content-center">
+  <div class="landing-header d-flex flex-row">
     <h1 id="title-landing text-align-center">YarnStash</h1>
   </div>
 </div>
