added top menu to new project page

--- a/app/views/pages/inventory.html.erb
+++ b/app/views/pages/inventory.html.erb
@@ -1,13 +1,1 @@
-<h1>My YarnStash</h1>
-
-<% @yarns.each do |yarn|%>
-<%= yarn.name %>
-<br>
-<%= yarn.brand %>
-<br>
-<%= yarn.fibre_type %>
-<br>
-<%= yarn.yarn_weight %>
-<br>
-<%= yarn.skein_count %>
-<% end %>
+<h1 class="text-center" style="font-family: 'Borel', cursive;">My YarnStash</h1>
