--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
-  <div class="landing-header d-flex flex-row">
+  <div class="landing-header d-flex flex-row justify-content-between">
     <h1 id="title-landing text-align-center" style="font-family: 'Borel', cursive;">YarnStash</h1>
+    <i class="fa-solid fa-bars" id="menu-bars"></i>
+    <div class="dropdown-menu">
+      <a href="/inventory">My Profile</a>
+    </div>
   </div>
 </div>
