added cards to project index

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Project Index</h1>
-
-
-<% @projects.each do |project| %>
-<%= project.name %>
-<%= project.start_date %>
-<%= project.end_date %>
-<% end %>
+<div class="container">
+  <h1 style="font-family: 'Borel', cursive;">Project Index</h1>
+  <% @projects.each do |project| %>
+    <div class="card m-3">
+      <h3>Name: <%= project.name %></h3>
+      <p>Start-date:<%= project.start_date %></p>
+      <p>End-date:<%= project.end_date %></p>
+    </div>
+   <% end %>
+</div>
