--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -5,7 +5,7 @@
     <a href="/inventory">My Profile</a>
   </div>
 </div>
-<h1 class="text-center" style="font-family: 'Borel', cursive; margin-top: 40px;">Add a new project</h1>
+<h1 class="text-center" style="font-family: 'Borel', cursive; margin-top: 40px;">Create a new project</h1>
 <div class="container">
   <%= simple_form_for(@project) do |f| %>
   <div id="project-form-name">
