--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,7 @@
     <div class="d-flex flex-column" data-controller="drop-down-menu">
       <i class="fa-solid fa-bars" id="menu-bars" data-action="click->drop-down-menu#activate"></i>
       <div data-drop-down-menu-target="links" class="my-links d-flex flex-column d-none">
-        <a href="">My Projects</a>
-        <a href="">My Profile</a>
+        <%= link_to 'My Projects', projects_path %>
         <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
       </div>
     </div>
