adding styling to project show page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,7 @@
-<%= @project.name %>
+<div class="container">
+  <h1 class="text-center" style="font-family: 'Borel', cursive;"><%= @project.name %></h1>
+  <p>Description:<%= @project.description %></p>
+  <p>Start date: <%= @project.start_date %></p>
+  <p>End date: <%= @project.end_date %></p>
+  <p></p>
+</div>
